range-slider: z-index laying issue
See also: d2a4dab

--- a/packages/ui/styles/style.scss
+++ b/packages/ui/styles/style.scss
@@ -20,6 +20,7 @@ range-slider#year-range {
   max-width: 70%;
   height: 50px;
   display: block;
+  z-index: 0;
 
   @media (max-width: 1023px) {
     width: 90%;
@@ -33,6 +34,7 @@ div.toggles {
   max-width: 70%;
   height: 50px;
   display: block;
+
   text-align: center;
 
   simple-switcher {
